# ptx-vm

./: AUTHORS  AUTHORS_UPDATE.md  CHANGELOG.md  CITATION.cff  CMAKE_AUDIT_REPORT.md  CMakeLists.txt  CONTRIBUTORS.md  DOCS_INDEX.md  DOCS_REORGANIZATION.md  HEADER_ORGANIZATION.md  LICENSE  NVIDIA PTX Virtual Machine Development.md  README.md  RELEASE_NOTES.md  blog.md  test_debug.cpp  test_parser_debug.cpp
blog/: blog.md  how-to-generate-ptx-from-cuda-c.md  smoke_test_introduction.md
cuda/cuda_runtime/: ACTION_PLAN.md  BUILD_AND_TEST.md  CMakeLists.txt  DEVELOPER_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  KERNEL_LAUNCH_SYNTAX.md  MULTI_WARP_FIX.md  README.md  THREAD_EXECUTION_MODEL.md  TODO.md  WHY_SHARED_REGISTERS_WORK.md  build.bat  build.sh  cuda_runtime.cpp  cuda_runtime.h  cuda_runtime_internal.h  ptxrtConfig.cmake.in  quick_build.sh
cuda/cuda_runtime/examples/: CMakeLists.txt  README.md  build.sh  simple_add-29b6b6de.ptx.tmp  simple_add.cu  simple_add.ptx
cuda/cudac/: cudac_demo.cu
cuda/docs/: make_clang_compilied_cudac_run_on_ptxvm.md
dev_docs/: CONTROL_FLOW_FINAL_FIX.md  CONTROL_FLOW_FIX.md  DOCUMENTATION_USAGE_UPDATE_SUMMARY.md  HEADER_ORGANIZATION.md  INITIALIZATION_AUDIT.md  LOGGING_CODE_REVIEW.md  LOGGING_SYSTEM_COMPLETE_REPORT.md  NVIDIA PTX Virtual Machine Development.md  README.md  complete_implementation_summary.md  developer_guide.md  divergence_performance_testing.md  host_api_loadprogram_refactoring.md  implementation_summary_phase2.md  implementation_summary_phase3.md  logging_system_implementation.md  memory_optimizations.md  multi_function_implementation_summary.md  new_features_implementation_guide.md  next_phase_development_plan.md  param_auto_inference_implementation_summary.md  performance_testing.md  ptx_parser_complete_design.md  setupKernelParameters_fix.md
docs/: CMakeLists.txt  api_documentation.md  comprehensive_implementation_analysis.md  cuda_binary_loader.md  developer_guide.md  divergence_handling.md  implementation_summary_phase1.md  implementation_summary_phase2.md  implementation_summary_phase4.md  loadAndExecuteProgram_fix.md  memory_optimizations.md  next_phase_development_plan.md  parser_improvements_needed.md  ptx_entry_function_without_param.md  ptx_parser_complete_design.md  ptx_parser_structures.hpp  user_guide.md  warp_scheduler.md
docs_dev/: ARCHIVE_INDEX.md  NVIDIA PTX Virtual Machine Development.md  README.md  comprehensive_implementation_analysis.md  cuda_binary_loader_removal.md  developer_guide.md  divergence_performance_testing.md  implementation_summary_phase1.md  implementation_summary_phase4.md  logging_system_implementation.md  multi_function_implementation_summary.md  new_features_implementation_guide.md  parameter_passing_example_summary.md  parameter_passing_example_update.md  parser_improvements_needed.md  performance_testing.md  smoke_test_reimplementation.md
docs_dev/archive/: AUTHORS_UPDATE.md  DOCS_REORGANIZATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_SYSTEM_COMPLETE_REPORT.md  complete_implementation_summary.md  implementation_summary_phase2.md  implementation_summary_phase3.md  loadAndExecuteProgram_fix.md  memory_subsystem_initialization_fix.md  parameter_passing_example_summary.md  plan-docsCleanup.prompt.md
docs_spec/: README.md  cuda_binary_loader.md  have_not_simulated.md  how_CudaC_and_PTX_called_by_HostC.md
docs_user/: README.md  USER_GUIDE_CN.md  api_documentation.md  cli_usage_correction.md  logging_system.md  multi_function_execution_guide.md  param_type_of_ptx_entry_function.md  ptx_entry_function_complete_guide.md  quick_reference.md  usage_examples.md  user_guide.md  visualization_features.md
examples/: CMakeLists.txt  divergence_handling_examples.md  execution_result_demo.cpp  float_and_setp_example.ptx  memory_optimization_examples.md  mixed_param_test.ptx  multi_function_example.ptx  no_param_kernels.ptx  parameter_passing_example.cpp  parameter_passing_example.ptx  selp_and_cvt_example.ptx  test_trim.cpp
include/: CMakeLists.txt  cli_interface.hpp  cuda_binary_loader.hpp  debugger.hpp  host_api.hpp  instruction_types.hpp  logger.hpp  performance_counters.hpp  vm.hpp
install/examples/: comprehensive_test_suite.ptx  (+4 more)
spec_docs/: CMakeLists.txt  README.md  divergence_handling.md  predicate_handler.md  reconvergence_mechanism.md  warp_scheduler.md
src/: main.cpp
src/core/: CMakeLists.txt  performance_counters.cpp  vm.cpp  vm.hpp  vm_profiler.cpp
src/execution/: CMakeLists.txt  control_flow_graph.cpp  divergence_reconvergence.cpp  executor.cpp  executor.hpp  predicate_handler.cpp  predicate_handler.hpp  reconvergence_mechanism.cpp  reconvergence_mechanism.hpp  warp_scheduler.cpp  warp_scheduler.hpp
src/host/: CMakeLists.txt  cli_interface.cpp  cuda_binary_loader.cpp  host_api.cpp
src/memory/: CMakeLists.txt  memory.cpp  memory.hpp  memory_optimizer.cpp  memory_optimizer.hpp
src/optimizer/: CMakeLists.txt  instruction_scheduler.cpp  instruction_scheduler.hpp  register_allocator.cpp  register_allocator.hpp
src/parser/: CMakeLists.txt  parser.cpp  parser.hpp
src/registers/: CMakeLists.txt  register_bank.cpp  register_bank.hpp
tests/: CMakeLists.txt
tests/executor_tests/: CMakeLists.txt  basic_math_tests.cpp  control_flow_tests.cpp
tests/memory_tests/: CMakeLists.txt  advanced_memory_tests.cpp
tests/performance_benchmarks/: CMakeLists.txt  register_allocation_benchmark.cpp
tests/system_tests/: divergence_performance_test.cpp  executor_performance_test.cpp  memory_performance_test.cpp  parser_test.cpp  parser_verification.cpp  performance_test.cpp  reconvergence_performance_test.cpp  reconvergence_test.cpp  smoke_test.cpp
user_docs/: README.md  USER_GUIDE_CN.md  api_documentation.md  auto_param_type_inference_guide.md  cli_usage_correction.md  correct_ptx_usage_examples.md  logging_system.md  multi_function_execution_guide.md  no_param_kernel_support.md  ptx_entry_function_complete_guide.md  quick_reference.md  user_guide.md  visualization_features.md
(+7 files in other folders)
